--- a/spring-5-mvc/pom.xml
+++ b/spring-5-mvc/pom.xml
@@ -162,6 +162,42 @@
             </plugin>
 
         </plugins>
+        <pluginManagement>
+        	<plugins>
+        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        		<plugin>
+        			<groupId>org.eclipse.m2e</groupId>
+        			<artifactId>lifecycle-mapping</artifactId>
+        			<version>1.0.0</version>
+        			<configuration>
+        				<lifecycleMappingMetadata>
+        					<pluginExecutions>
+        						<pluginExecution>
+        							<pluginExecutionFilter>
+        								<groupId>
+        									org.jetbrains.kotlin
+        								</groupId>
+        								<artifactId>
+        									kotlin-maven-plugin
+        								</artifactId>
+        								<versionRange>
+        									[1.1.2,)
+        								</versionRange>
+        								<goals>
+        									<goal>test-compile</goal>
+        									<goal>compile</goal>
+        								</goals>
+        							</pluginExecutionFilter>
+        							<action>
+        								<ignore></ignore>
+        							</action>
+        						</pluginExecution>
+        					</pluginExecutions>
+        				</lifecycleMappingMetadata>
+        			</configuration>
+        		</plugin>
+        	</plugins>
+        </pluginManagement>
     </build>
 
     <repositories>
